HW4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> block
Rule 1     block -> print_smt
Rule 2     print_smt -> expression
Rule 3     expression -> expression PLUS expression
Rule 4     expression -> expression MINUS expression
Rule 5     expression -> expression TIMES expression
Rule 6     expression -> expression DIVIDE expression
Rule 7     expression -> expression FLOORDIVIDE expression
Rule 8     expression -> expression MODULUS expression
Rule 9     expression -> expression POWER expression
Rule 10    expression -> LPAREN expression RPAREN
Rule 11    expression -> LBRACKET list RBRACKET
Rule 12    expression -> LBRACKET RBRACKET
Rule 13    expression -> expression LBRACKET expression RBRACKET
Rule 14    expression -> expression OR expression
Rule 15    expression -> expression AND expression
Rule 16    expression -> expression LESSTHAN expression
Rule 17    expression -> expression LESSEQUALTHAN expression
Rule 18    expression -> expression EQUAL expression
Rule 19    expression -> expression NOTEQUAL expression
Rule 20    expression -> expression GREATERTHAN expression
Rule 21    expression -> expression GREATEREQUALTHAN expression
Rule 22    expression -> expression IN expression
Rule 23    expression -> NOT expression
Rule 24    list -> expression COMMA list
Rule 25    list -> expression
Rule 26    expression -> factor
Rule 27    factor -> NUMBER
Rule 28    factor -> STRING
Rule 29    factor -> TRUE
Rule 30    factor -> FALSE

Terminals, with rules where they appear

AND                  : 15
COMMA                : 24
DIVIDE               : 6
EQUAL                : 18
FALSE                : 30
FLOORDIVIDE          : 7
GREATEREQUALTHAN     : 21
GREATERTHAN          : 20
IN                   : 22
LBRACKET             : 11 12 13
LESSEQUALTHAN        : 17
LESSTHAN             : 16
LPAREN               : 10
MINUS                : 4
MODULUS              : 8
NOT                  : 23
NOTEQUAL             : 19
NUMBER               : 27
OR                   : 14
PLUS                 : 3
POWER                : 9
RBRACKET             : 11 12 13
RPAREN               : 10
STRING               : 28
TIMES                : 5
TRUE                 : 29
error                : 

Nonterminals, with rules where they appear

block                : 0
expression           : 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 24 25
factor               : 26
list                 : 11 24
print_smt            : 1

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . print_smt
    (2) print_smt -> . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression FLOORDIVIDE expression
    (8) expression -> . expression MODULUS expression
    (9) expression -> . expression POWER expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . LBRACKET list RBRACKET
    (12) expression -> . LBRACKET RBRACKET
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression LESSTHAN expression
    (17) expression -> . expression LESSEQUALTHAN expression
    (18) expression -> . expression EQUAL expression
    (19) expression -> . expression NOTEQUAL expression
    (20) expression -> . expression GREATERTHAN expression
    (21) expression -> . expression GREATEREQUALTHAN expression
    (22) expression -> . expression IN expression
    (23) expression -> . NOT expression
    (26) expression -> . factor
    (27) factor -> . NUMBER
    (28) factor -> . STRING
    (29) factor -> . TRUE
    (30) factor -> . FALSE

    LPAREN          shift and go to state 4
    LBRACKET        shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    block                          shift and go to state 1
    print_smt                      shift and go to state 2
    expression                     shift and go to state 3
    factor                         shift and go to state 7

state 1

    (0) S' -> block .



state 2

    (1) block -> print_smt .

    $end            reduce using rule 1 (block -> print_smt .)


state 3

    (2) print_smt -> expression .
    (3) expression -> expression . PLUS expression
    (4) expression -> expression . MINUS expression
    (5) expression -> expression . TIMES expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . FLOORDIVIDE expression
    (8) expression -> expression . MODULUS expression
    (9) expression -> expression . POWER expression
    (13) expression -> expression . LBRACKET expression RBRACKET
    (14) expression -> expression . OR expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . LESSTHAN expression
    (17) expression -> expression . LESSEQUALTHAN expression
    (18) expression -> expression . EQUAL expression
    (19) expression -> expression . NOTEQUAL expression
    (20) expression -> expression . GREATERTHAN expression
    (21) expression -> expression . GREATEREQUALTHAN expression
    (22) expression -> expression . IN expression

    $end            reduce using rule 2 (print_smt -> expression .)
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 15
    FLOORDIVIDE     shift and go to state 16
    MODULUS         shift and go to state 17
    POWER           shift and go to state 18
    LBRACKET        shift and go to state 19
    OR              shift and go to state 20
    AND             shift and go to state 21
    LESSTHAN        shift and go to state 22
    LESSEQUALTHAN   shift and go to state 23
    EQUAL           shift and go to state 24
    NOTEQUAL        shift and go to state 25
    GREATERTHAN     shift and go to state 26
    GREATEREQUALTHAN shift and go to state 27
    IN              shift and go to state 28


state 4

    (10) expression -> LPAREN . expression RPAREN
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression FLOORDIVIDE expression
    (8) expression -> . expression MODULUS expression
    (9) expression -> . expression POWER expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . LBRACKET list RBRACKET
    (12) expression -> . LBRACKET RBRACKET
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression LESSTHAN expression
    (17) expression -> . expression LESSEQUALTHAN expression
    (18) expression -> . expression EQUAL expression
    (19) expression -> . expression NOTEQUAL expression
    (20) expression -> . expression GREATERTHAN expression
    (21) expression -> . expression GREATEREQUALTHAN expression
    (22) expression -> . expression IN expression
    (23) expression -> . NOT expression
    (26) expression -> . factor
    (27) factor -> . NUMBER
    (28) factor -> . STRING
    (29) factor -> . TRUE
    (30) factor -> . FALSE

    LPAREN          shift and go to state 4
    LBRACKET        shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 29
    factor                         shift and go to state 7

state 5

    (11) expression -> LBRACKET . list RBRACKET
    (12) expression -> LBRACKET . RBRACKET
    (24) list -> . expression COMMA list
    (25) list -> . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression FLOORDIVIDE expression
    (8) expression -> . expression MODULUS expression
    (9) expression -> . expression POWER expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . LBRACKET list RBRACKET
    (12) expression -> . LBRACKET RBRACKET
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression LESSTHAN expression
    (17) expression -> . expression LESSEQUALTHAN expression
    (18) expression -> . expression EQUAL expression
    (19) expression -> . expression NOTEQUAL expression
    (20) expression -> . expression GREATERTHAN expression
    (21) expression -> . expression GREATEREQUALTHAN expression
    (22) expression -> . expression IN expression
    (23) expression -> . NOT expression
    (26) expression -> . factor
    (27) factor -> . NUMBER
    (28) factor -> . STRING
    (29) factor -> . TRUE
    (30) factor -> . FALSE

    RBRACKET        shift and go to state 31
    LPAREN          shift and go to state 4
    LBRACKET        shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    list                           shift and go to state 30
    expression                     shift and go to state 32
    factor                         shift and go to state 7

state 6

    (23) expression -> NOT . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression FLOORDIVIDE expression
    (8) expression -> . expression MODULUS expression
    (9) expression -> . expression POWER expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . LBRACKET list RBRACKET
    (12) expression -> . LBRACKET RBRACKET
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression LESSTHAN expression
    (17) expression -> . expression LESSEQUALTHAN expression
    (18) expression -> . expression EQUAL expression
    (19) expression -> . expression NOTEQUAL expression
    (20) expression -> . expression GREATERTHAN expression
    (21) expression -> . expression GREATEREQUALTHAN expression
    (22) expression -> . expression IN expression
    (23) expression -> . NOT expression
    (26) expression -> . factor
    (27) factor -> . NUMBER
    (28) factor -> . STRING
    (29) factor -> . TRUE
    (30) factor -> . FALSE

    LPAREN          shift and go to state 4
    LBRACKET        shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 33
    factor                         shift and go to state 7

state 7

    (26) expression -> factor .

    PLUS            reduce using rule 26 (expression -> factor .)
    MINUS           reduce using rule 26 (expression -> factor .)
    TIMES           reduce using rule 26 (expression -> factor .)
    DIVIDE          reduce using rule 26 (expression -> factor .)
    FLOORDIVIDE     reduce using rule 26 (expression -> factor .)
    MODULUS         reduce using rule 26 (expression -> factor .)
    POWER           reduce using rule 26 (expression -> factor .)
    LBRACKET        reduce using rule 26 (expression -> factor .)
    OR              reduce using rule 26 (expression -> factor .)
    AND             reduce using rule 26 (expression -> factor .)
    LESSTHAN        reduce using rule 26 (expression -> factor .)
    LESSEQUALTHAN   reduce using rule 26 (expression -> factor .)
    EQUAL           reduce using rule 26 (expression -> factor .)
    NOTEQUAL        reduce using rule 26 (expression -> factor .)
    GREATERTHAN     reduce using rule 26 (expression -> factor .)
    GREATEREQUALTHAN reduce using rule 26 (expression -> factor .)
    IN              reduce using rule 26 (expression -> factor .)
    $end            reduce using rule 26 (expression -> factor .)
    RPAREN          reduce using rule 26 (expression -> factor .)
    COMMA           reduce using rule 26 (expression -> factor .)
    RBRACKET        reduce using rule 26 (expression -> factor .)


state 8

    (27) factor -> NUMBER .

    PLUS            reduce using rule 27 (factor -> NUMBER .)
    MINUS           reduce using rule 27 (factor -> NUMBER .)
    TIMES           reduce using rule 27 (factor -> NUMBER .)
    DIVIDE          reduce using rule 27 (factor -> NUMBER .)
    FLOORDIVIDE     reduce using rule 27 (factor -> NUMBER .)
    MODULUS         reduce using rule 27 (factor -> NUMBER .)
    POWER           reduce using rule 27 (factor -> NUMBER .)
    LBRACKET        reduce using rule 27 (factor -> NUMBER .)
    OR              reduce using rule 27 (factor -> NUMBER .)
    AND             reduce using rule 27 (factor -> NUMBER .)
    LESSTHAN        reduce using rule 27 (factor -> NUMBER .)
    LESSEQUALTHAN   reduce using rule 27 (factor -> NUMBER .)
    EQUAL           reduce using rule 27 (factor -> NUMBER .)
    NOTEQUAL        reduce using rule 27 (factor -> NUMBER .)
    GREATERTHAN     reduce using rule 27 (factor -> NUMBER .)
    GREATEREQUALTHAN reduce using rule 27 (factor -> NUMBER .)
    IN              reduce using rule 27 (factor -> NUMBER .)
    $end            reduce using rule 27 (factor -> NUMBER .)
    RPAREN          reduce using rule 27 (factor -> NUMBER .)
    COMMA           reduce using rule 27 (factor -> NUMBER .)
    RBRACKET        reduce using rule 27 (factor -> NUMBER .)


state 9

    (28) factor -> STRING .

    PLUS            reduce using rule 28 (factor -> STRING .)
    MINUS           reduce using rule 28 (factor -> STRING .)
    TIMES           reduce using rule 28 (factor -> STRING .)
    DIVIDE          reduce using rule 28 (factor -> STRING .)
    FLOORDIVIDE     reduce using rule 28 (factor -> STRING .)
    MODULUS         reduce using rule 28 (factor -> STRING .)
    POWER           reduce using rule 28 (factor -> STRING .)
    LBRACKET        reduce using rule 28 (factor -> STRING .)
    OR              reduce using rule 28 (factor -> STRING .)
    AND             reduce using rule 28 (factor -> STRING .)
    LESSTHAN        reduce using rule 28 (factor -> STRING .)
    LESSEQUALTHAN   reduce using rule 28 (factor -> STRING .)
    EQUAL           reduce using rule 28 (factor -> STRING .)
    NOTEQUAL        reduce using rule 28 (factor -> STRING .)
    GREATERTHAN     reduce using rule 28 (factor -> STRING .)
    GREATEREQUALTHAN reduce using rule 28 (factor -> STRING .)
    IN              reduce using rule 28 (factor -> STRING .)
    $end            reduce using rule 28 (factor -> STRING .)
    RPAREN          reduce using rule 28 (factor -> STRING .)
    COMMA           reduce using rule 28 (factor -> STRING .)
    RBRACKET        reduce using rule 28 (factor -> STRING .)


state 10

    (29) factor -> TRUE .

    PLUS            reduce using rule 29 (factor -> TRUE .)
    MINUS           reduce using rule 29 (factor -> TRUE .)
    TIMES           reduce using rule 29 (factor -> TRUE .)
    DIVIDE          reduce using rule 29 (factor -> TRUE .)
    FLOORDIVIDE     reduce using rule 29 (factor -> TRUE .)
    MODULUS         reduce using rule 29 (factor -> TRUE .)
    POWER           reduce using rule 29 (factor -> TRUE .)
    LBRACKET        reduce using rule 29 (factor -> TRUE .)
    OR              reduce using rule 29 (factor -> TRUE .)
    AND             reduce using rule 29 (factor -> TRUE .)
    LESSTHAN        reduce using rule 29 (factor -> TRUE .)
    LESSEQUALTHAN   reduce using rule 29 (factor -> TRUE .)
    EQUAL           reduce using rule 29 (factor -> TRUE .)
    NOTEQUAL        reduce using rule 29 (factor -> TRUE .)
    GREATERTHAN     reduce using rule 29 (factor -> TRUE .)
    GREATEREQUALTHAN reduce using rule 29 (factor -> TRUE .)
    IN              reduce using rule 29 (factor -> TRUE .)
    $end            reduce using rule 29 (factor -> TRUE .)
    RPAREN          reduce using rule 29 (factor -> TRUE .)
    COMMA           reduce using rule 29 (factor -> TRUE .)
    RBRACKET        reduce using rule 29 (factor -> TRUE .)


state 11

    (30) factor -> FALSE .

    PLUS            reduce using rule 30 (factor -> FALSE .)
    MINUS           reduce using rule 30 (factor -> FALSE .)
    TIMES           reduce using rule 30 (factor -> FALSE .)
    DIVIDE          reduce using rule 30 (factor -> FALSE .)
    FLOORDIVIDE     reduce using rule 30 (factor -> FALSE .)
    MODULUS         reduce using rule 30 (factor -> FALSE .)
    POWER           reduce using rule 30 (factor -> FALSE .)
    LBRACKET        reduce using rule 30 (factor -> FALSE .)
    OR              reduce using rule 30 (factor -> FALSE .)
    AND             reduce using rule 30 (factor -> FALSE .)
    LESSTHAN        reduce using rule 30 (factor -> FALSE .)
    LESSEQUALTHAN   reduce using rule 30 (factor -> FALSE .)
    EQUAL           reduce using rule 30 (factor -> FALSE .)
    NOTEQUAL        reduce using rule 30 (factor -> FALSE .)
    GREATERTHAN     reduce using rule 30 (factor -> FALSE .)
    GREATEREQUALTHAN reduce using rule 30 (factor -> FALSE .)
    IN              reduce using rule 30 (factor -> FALSE .)
    $end            reduce using rule 30 (factor -> FALSE .)
    RPAREN          reduce using rule 30 (factor -> FALSE .)
    COMMA           reduce using rule 30 (factor -> FALSE .)
    RBRACKET        reduce using rule 30 (factor -> FALSE .)


state 12

    (3) expression -> expression PLUS . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression FLOORDIVIDE expression
    (8) expression -> . expression MODULUS expression
    (9) expression -> . expression POWER expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . LBRACKET list RBRACKET
    (12) expression -> . LBRACKET RBRACKET
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression LESSTHAN expression
    (17) expression -> . expression LESSEQUALTHAN expression
    (18) expression -> . expression EQUAL expression
    (19) expression -> . expression NOTEQUAL expression
    (20) expression -> . expression GREATERTHAN expression
    (21) expression -> . expression GREATEREQUALTHAN expression
    (22) expression -> . expression IN expression
    (23) expression -> . NOT expression
    (26) expression -> . factor
    (27) factor -> . NUMBER
    (28) factor -> . STRING
    (29) factor -> . TRUE
    (30) factor -> . FALSE

    LPAREN          shift and go to state 4
    LBRACKET        shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 34
    factor                         shift and go to state 7

state 13

    (4) expression -> expression MINUS . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression FLOORDIVIDE expression
    (8) expression -> . expression MODULUS expression
    (9) expression -> . expression POWER expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . LBRACKET list RBRACKET
    (12) expression -> . LBRACKET RBRACKET
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression LESSTHAN expression
    (17) expression -> . expression LESSEQUALTHAN expression
    (18) expression -> . expression EQUAL expression
    (19) expression -> . expression NOTEQUAL expression
    (20) expression -> . expression GREATERTHAN expression
    (21) expression -> . expression GREATEREQUALTHAN expression
    (22) expression -> . expression IN expression
    (23) expression -> . NOT expression
    (26) expression -> . factor
    (27) factor -> . NUMBER
    (28) factor -> . STRING
    (29) factor -> . TRUE
    (30) factor -> . FALSE

    LPAREN          shift and go to state 4
    LBRACKET        shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 35
    factor                         shift and go to state 7

state 14

    (5) expression -> expression TIMES . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression FLOORDIVIDE expression
    (8) expression -> . expression MODULUS expression
    (9) expression -> . expression POWER expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . LBRACKET list RBRACKET
    (12) expression -> . LBRACKET RBRACKET
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression LESSTHAN expression
    (17) expression -> . expression LESSEQUALTHAN expression
    (18) expression -> . expression EQUAL expression
    (19) expression -> . expression NOTEQUAL expression
    (20) expression -> . expression GREATERTHAN expression
    (21) expression -> . expression GREATEREQUALTHAN expression
    (22) expression -> . expression IN expression
    (23) expression -> . NOT expression
    (26) expression -> . factor
    (27) factor -> . NUMBER
    (28) factor -> . STRING
    (29) factor -> . TRUE
    (30) factor -> . FALSE

    LPAREN          shift and go to state 4
    LBRACKET        shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 36
    factor                         shift and go to state 7

state 15

    (6) expression -> expression DIVIDE . expression
    (3) expression -> . expression PLUS expression
    (4) expression -> . expression MINUS expression
    (5) expression -> . expression TIMES expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression FLOORDIVIDE expression
    (8) expression -> . expression MODULUS expression
    (9) expression -> . expression POWER expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . LBRACKET list RBRACKET
    (12) expression -> . LBRACKET RBRACKET
    (13) expression -> . expression LBRACKET expression RBRACKET
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression LESSTHAN expression
    (17) expression -> . expression LESSEQUALTHAN expression
    (18) expression -> . expression EQUAL expression
    (19) expression -> . expression NOTEQUAL expression
    (20) expression -> . expression GREATERTHAN expression
    (21) expression -> . expression GREATEREQUALTHAN expression
    (22) expression -> . expression IN expression
    (23) expression -> . NOT expression
    (26) expression -> . factor
    (27) factor -> . NUMBER
    (28) factor -> . STRING
    (29) factor -> . TRUE
    (30) factor -> . FALSE

    LPAREN          shift and go to state 4
    LBRACKET        shift and go to state 5
    NOT             shift and go to state 6
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11

    expression                     shift and go to state 37
    factor                         shift and go to state 7

state 16
